<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:text="@string/widgets_message"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="163dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="249dp"
        android:layout_height="129dp"
        android:layout_gravity="fill"
        android:layout_weight="1"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/check_message" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/switchon_off" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_message"
        android:inputType="textPersonName" />



</GridLayout>